# device-random-c

./: .gitignore  CMakeLists.txt  README.md
scripts/: Dockerfile  Dockerfile.env  build.sh  build_deps.sh
